# htmx-blog

./: .gitignore  Cargo.toml  Makefile  tailwind.config.js
src/: db.rs  main.rs
