[package]
name = "htmx-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.195", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
askama = { version = "0.12.0", features = ["with-actix-web"] }
askama_actix = "0.14.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }

[dev-dependencies]
reqwest = "0.11.23"
